--- a/P-42 Lista de compras/index.html
+++ b/P-42 Lista de compras/index.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Katas/title>
+    <script src="script.js" defer></script>
+    <title>Lista de compras</title>
 </head>
 <body>
-    <main>
-        <div class="container">
-            <h1>Katas</h1>
-            <ol>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
-            </ol>
-        </div>
-    </main>
+        <ul id="list">
+            <input type="text" id="input" placeholder="Titulo">
+            <button id="add">add</button>
+            <button id="reset">reset</button>
+        </ul>
 </body>
 </html>
