--- a/P-40 Lista de tarefas/index.html
+++ b/P-40 Lista de tarefas/index.html
@@ -11,13 +11,17 @@
 <body>
     <header>
         <nav id="navBar">
-            <h1 id="title">My Task's</h1>
+            <h1 class="title" id="headTitle">My Task's</h1>
+            <div class="searchTable">
+            <input type="text" class="search" placeholder="Procurar tarefa">
+            <button class="searchBtn">Procurar</button>
+        </div>
         </nav>
     </header>
 
     <main class="allTasks">
         <div class="adicionar">
-            <h2 id="title">Inserir Tarefa</h2>
+            <h2 class="title">Inserir Tarefa</h2>
             <input type="text" name="novoItem" class="novoItem" placeholder="Digite a sua tarefa">
             <select name="tipo" class="tipo">
                 <option value="vazio">Escolha a prioridade</option>
@@ -29,7 +33,7 @@
         </div>
         <div id="uniqueButton"><button class="addItem">Adicionar tarefa na lista</button></div>
         <div class="taskBoard">
-        <h2 id="title">Tasks</h2>
+        <h2 class="title">Tasks</h2>
         <ul class="tasks">
             
             
